Change java project version to 8 and database to postgres